fixed navbar to top of screen and adjusted z-index on navbar

--- a/CSS/custom.css
+++ b/CSS/custom.css
@@ -32,3 +32,11 @@ h2 {
 footer {
   margin: auto;
 }
+
+#navbar {
+  padding: 10px;
+  height: 60px;
+  position: fixed;
+  width: 100%;
+  z-index: 3;
+}
